# neurovolume_testing

./: .gitattributes  .gitignore  Makefile  None  README.md  config.csv  main.py  pyproject.toml  scene.py  scratch.py  setup.py  setup_neurovolume  test_patterns.py
.helix/: languages.toml
app/: blender_script.py  bridge.py  ct.py  datasets.py  debug.py  dither.py  env.py  geo.py  main.py  mri.py  openVDB_benchmark.py  render.py  setup.py  util.py
blender_files/: newbrains.blend  template.blend
blender_scripts/: blender_script.py  import_nibabel.py  import_vdb.py  openVDB_builder.py
testing_app/: blender_script.py  bridge.py  build_env.py  cli.py  ct.py  datasets.py  env.py  geo.py  main.py  mri.py  render.py  setup.py  test_bunny.py  test_geo.py  test_mri.py  test_patterns.py  util.py
