[project]
name = "neurovolume-testing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11" 
dependencies = [
    "bpy>=5.0.1",
    "nibabel>=5.4.2",
    "ruff>=0.15.6",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "ruff>=0.15.6",
]
